--- a/arduino/splitflap/platformio.ini
+++ b/arduino/splitflap/platformio.ini
@@ -68,7 +68,7 @@ build_flags =
     -DSPLITFLAP_PIO_HARDWARE_CONFIG
 
 [esp32base]
-platform = espressif32@3.4
+platform = espressif32
 framework = arduino
 board = esp32dev
 upload_speed = 921600
@@ -95,7 +95,7 @@ lib_deps =
 build_flags =
     -DSPI_IO=true
     -DSPLITFLAP_PIO_HARDWARE_CONFIG
-    -DREVERSE_MOTOR_DIRECTION=false
+    -DREVERSE_MOTOR_DIRECTION=true
     
     ; Set to true to enable MQTT support (see secrets.h.example for configuration)
     -DMQTT=false
@@ -133,7 +133,7 @@ extends=esp32base
 build_flags =
     ${esp32base.build_flags}
     -DCHAINLINK
-    -DNUM_MODULES=6
+    -DNUM_MODULES=1
 
 [env:chainlinkBase]
 extends=esp32base
