--- a/arduino/splitflap/platformio.ini
+++ b/arduino/splitflap/platformio.ini
@@ -134,6 +134,7 @@ build_flags =
     ${esp32base.build_flags}
     -DCHAINLINK
     -DNUM_MODULES=1
+    -DREVERSE_STRING=1
 
 [env:chainlinkBase]
 extends=esp32base
