--- a/arduino/splitflap/platformio.ini
+++ b/arduino/splitflap/platformio.ini
@@ -68,7 +68,8 @@ build_flags =
     -DSPLITFLAP_PIO_HARDWARE_CONFIG
 
 [esp32base]
-platform = espressif32
+;platform = espressif32
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2idf/platform-espressif32-2.0.2.zip
 framework = arduino
 board = esp32dev
 upload_speed = 921600
