--- a/arduino/splitflap/platformio.ini
+++ b/arduino/splitflap/platformio.ini
@@ -68,8 +68,7 @@ build_flags =
     -DSPLITFLAP_PIO_HARDWARE_CONFIG
 
 [esp32base]
-;platform = espressif32
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2idf/platform-espressif32-2.0.2.zip
+platform = espressif32
 framework = arduino
 board = esp32dev
 upload_speed = 921600
@@ -136,6 +135,8 @@ build_flags =
     -DCHAINLINK
     -DREVERSE_STRING=1
     -DNUM_MODULES=6
+;upload_protocol = espota
+;fupload_port = 10.0.0.139
 
 [env:chainlinkBase]
 extends=esp32base
