Add experimental OTA updates.

--- a/arduino/splitflap/platformio.ini
+++ b/arduino/splitflap/platformio.ini
@@ -135,6 +135,7 @@ build_flags =
     -DCHAINLINK
     -DREVERSE_STRING=1
     -DNUM_MODULES=6
+    -DENABLE_OTA=1
 ;upload_protocol = espota
 ;fupload_port = 10.0.0.139
 
