--- a/arduino/splitflap/platformio.ini
+++ b/arduino/splitflap/platformio.ini
@@ -13,59 +13,13 @@ src_dir = Splitflap
 
 ; Note: change this to the target environment to get VSCode to handle code
 ; completion, etc, correctly.
-default_envs = uno-shift-register
+default_envs = chainlink
 
 [extra]
 lib_deps =
     Adafruit NeoPixel@1.7.0
     Adafruit SSD1306@2.4.3
     Adafruit GFX Library@1.10.4
-
-[env:uno-shift-register]
-platform = atmelavr
-board = uno
-framework = arduino
-monitor_speed = 38400
-monitor_flags = --echo
-lib_deps = ${extra.lib_deps}
-build_flags =
-    -DSPI_IO=true
-    -DREVERSE_MOTOR_DIRECTION=false
-    -DNEOPIXEL_DEBUGGING_ENABLED=true
-    -DSSD1306_DISPLAY=false
-    -DINA219_POWER_SENSE=false
-    -DSPLITFLAP_PIO_HARDWARE_CONFIG
-
-[env:uno-direct]
-platform = atmelavr
-board = uno
-framework = arduino
-monitor_speed = 38400
-monitor_flags = --echo
-lib_deps = ${extra.lib_deps}
-build_flags =
-    -DNUM_MODULES=3
-    -DSPI_IO=false
-    -DREVERSE_MOTOR_DIRECTION=false
-    -DNEOPIXEL_DEBUGGING_ENABLED=true
-    -DSSD1306_DISPLAY=false
-    -DINA219_POWER_SENSE=false
-    -DSPLITFLAP_PIO_HARDWARE_CONFIG
-
-[env:mega-direct]
-platform = atmelavr
-board = megaatmega2560
-framework = arduino
-monitor_speed = 38400
-monitor_flags = --echo
-lib_deps = ${extra.lib_deps}
-build_flags =
-    -DSPI_IO=false
-    -DREVERSE_MOTOR_DIRECTION=false
-    -DNEOPIXEL_DEBUGGING_ENABLED=true
-    -DSSD1306_DISPLAY=true
-    -DINA219_POWER_SENSE=true
-    -DSPLITFLAP_PIO_HARDWARE_CONFIG
 
 [esp32base]
 platform = espressif32
@@ -134,37 +88,7 @@ build_flags =
     ${esp32base.build_flags}
     -DCHAINLINK
     -DREVERSE_STRING=1
-    -DNUM_MODULES=6
+    -DNUM_MODULES=4
     -DENABLE_OTA=1
-;upload_protocol = espota
-;fupload_port = 10.0.0.139
-
-[env:chainlinkBase]
-extends=esp32base
-src_filter = ${esp32base.src_filter} +<../esp32/base>
-build_flags =
-    ${esp32base.build_flags}
-    -DCHAINLINK
-    -DCHAINLINK_BASE
-    -DNUM_MODULES=108
-    -DINA219_POWER_SENSE=true
-lib_deps =
-    ${esp32base.lib_deps}
-    adafruit/Adafruit MCP23017 Arduino Library @ ^1.3.0
-    fastled/FastLED @ ^3.4.0
-    adafruit/Adafruit BusIO @ ^1.9.1
-
-[env:chainlinkDriverTester]
-extends=esp32base
-src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<Splitflap.ino.cpp> +<../esp32/core> +<../esp32/tester>
-build_flags =
-    ${esp32base.build_flags}
-    -DCHAINLINK
-    -DCHAINLINK_DRIVER_TESTER
-    -DNUM_MODULES=12
-    -DINA219_POWER_SENSE=true
-lib_deps =
-    ${esp32base.lib_deps}
-    adafruit/Adafruit MCP23017 Arduino Library @ ^1.3.0
-    adafruit/Adafruit BusIO @ ^1.9.1
-build_type = debug
+upload_protocol = espota
+upload_port = 10.0.0.139
