--- a/arduino/splitflap/platformio.ini
+++ b/arduino/splitflap/platformio.ini
@@ -37,6 +37,8 @@ monitor_flags =
 ; .ino file (referred to as .ino.cpp during the build) and add additional source.
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<Splitflap.ino.cpp> +<../esp32/core> +<../esp32/splitflap> +<../esp32/proto_gen>
 lib_deps =
+    mathertel/OneButton@^2.0.3
+    jandelgado/JLed@^4.11.0
     bodmer/TFT_eSPI @ 2.4.25
     knolleary/PubSubClient @ 2.8
     bakercp/PacketSerial @ 1.4.0
