Fix for persistent properties

--- a/arduino/splitflap/platformio.ini
+++ b/arduino/splitflap/platformio.ini
@@ -94,4 +94,5 @@ build_flags =
     -DNUM_MODULES=4
     -DENABLE_OTA=1
 upload_protocol = espota
-upload_port = 10.0.0.139
+upload_port = 10.0.0.160
+lib_ldf_mode = deep+
